--- a/Scripts/bridging_postresql_awsS3.ipynb
+++ b/Scripts/bridging_postresql_awsS3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Saving the file locally (SQL Query)"
+    "#### Saving the file locally (PostgreSQL SQL Query)"
    ]
   },
   {
